--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/johnsonkwok/hrsf107-mini-apps-1#readme",
   "dependencies": {
     "ejs": "^2.6.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-fileupload": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.8"
