--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.2",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.8",
     "react": "^16.6.3",
